chore: add ember and single-spa links in home page

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -52,7 +52,7 @@
             <h1 class="flex flex-row justify-center p-16">
               <p class="max-w-md">
                 This example project shows independently built and deployed
-                microfrontends that use Ember and single-spa. Each nav link
+                microfrontends that use <a href="https://emberjs.com" target="_blank">Ember.js</a> and <a href="https://single-spa.js.org" target="_blank">single-spa</a>. Each nav link
                 above takes you to a different microfrontend.
               </p>
             </h1>
