chore: add films mfe

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -47,6 +47,10 @@
             <application name="planets"></application>
             <div id="planets"></div>
           </route>
+          <route path="films">
+            <application name="films"></application>
+            <div id="films"></div>
+          </route>
           <route default>
             <h1 class="flex flex-row justify-center p-16">
               <p class="max-w-md">
